moduling the app

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Aprendendo a como investir</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="vue"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
