--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Um artigo para ensinar as pessoas de como investir corretamente, alguns calculos para exemplificar" />
+    <meta name="author" content="Gustavo Muniz, Kalila Reis, Pablo Estevão Barreto e Davi Wávila">
     <title>Aprendendo a como investir</title>
   </head>
   <body>
