--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Um artigo para ensinar as pessoas de como investir corretamente, alguns calculos para exemplificar" />
-    <meta name="author" content="Gustavo Muniz, Kalila Reis, Pablo Estevão Barreto e Davi Wávila">
+    <meta name="author" content="Gustavo Muniz, Kalila Reis, Pablo Estevão Barreto, Davi Wávila e Iasmim Silva">
     <title>Aprendendo a como investir</title>
   </head>
   <body>
